<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joeyhe.passwordmanager.interfaces.PasswordGeneratorPage">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pg_password"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/txt_length"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:hint="@string/length"
            android:maxLines="1"
            android:text="@string/_12"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp"
            tools:ignore="TextFields"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="87dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txt_pg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:lines="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_toStartOf="@+id/button" />

    <SeekBar
        android:id="@+id/seek_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chk_upper"
        android:layout_marginBottom="11dp"
        android:layout_toEndOf="@+id/textInputLayout2"
        android:max="60"
        android:progress="8"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="87dp" />

    <CheckBox
        android:id="@+id/chk_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/uppercase_letters_e_g_abcde"
        android:textSize="18sp"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/chk_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chk_upper"
        android:checked="true"
        android:text="@string/lowercase_letters_e_g_abcde"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/chk_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chk_lower"
        android:checked="true"
        android:text="@string/numbers_e_g_12345"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/chk_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chk_number"
        android:checked="true"
        android:text="@string/symbols_e_g"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/chk_excludeSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chk_symbol"
        android:checked="false"
        android:text="@string/exclude_similar_characters_e_g_il1ii"
        android:textSize="18sp" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_refresh"
        android:onClick="clickGenerate"
        android:textSize="30sp"
        android:id="@+id/button" />

    <Button
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:onClick="clickAccept"
        android:text="@string/accept"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
